@@ -36,8 +36,8 @@ public class ReladomoTranslator {
 
         // Entities to MithraObjects.
         erminTuple.getEntities().forEach(entity -> {
-            mithraObjects.put(entity.getName(), entityToMithraObject(entity, erminTuple
-                    .getEntityResolver(), erminTuple.getCodeResolver()));
+            mithraObjects.put(entity.getName(), entityToMithraObject(entity,
+                    erminTuple.getEntityResolver(), erminTuple.getCodeResolver()));
         });
 
         // Relations to MithraObjects. Possibly modifies existing entities.
@@ -48,8 +48,8 @@ public class ReladomoTranslator {
 
         // Codes to MithraObjects
         erminTuple.getCodeResolver().getNames().forEach(name -> {
-            mithraObjects.put(name, codeToMithraObject(name, erminTuple
-                    .getCodeResolver()));
+            mithraObjects.put(name,
+                    codeToMithraObject(name, erminTuple.getCodeResolver()));
         });
 
         return mithraObjects.values();
@@ -70,8 +70,8 @@ public class ReladomoTranslator {
             attributeType.setName(typeKey.getName().toLowerCamel());
             attributeType.setColumnName(typeKey.getName().toSnake());
             attributeType.setPrimaryKey(true);
-            typeKey.getType().accept(
-                    new ReladomoJavaTypeSetter(attributeType, codeResolver));
+            typeKey.getType()
+                    .accept(new ReladomoJavaTypeSetter(attributeType, codeResolver));
             attributes.add(attributeType);
         });
     }
@@ -90,8 +90,9 @@ public class ReladomoTranslator {
         accumulatePrimaryKeys(entity, entityResolver, codeResolver, attributes);
 
         // add non-key attributes
-        attributes.addAll(entity.getAttributes().stream().map(attribute -> toAttribute(
-                attribute, codeResolver)).collect(Collectors.toList()));
+        attributes.addAll(entity.getAttributes().stream()
+                .map(attribute -> toAttribute(attribute, codeResolver))
+                .collect(Collectors.toList()));
 
         return mithraObject;
     }
@@ -109,8 +110,8 @@ public class ReladomoTranslator {
                 attributeType.setNullable(true);
         }
         attributeType.setPrimaryKey(false);
-        attribute.getType().accept(
-                new ReladomoJavaTypeSetter(attributeType, codeResolver));
+        attribute.getType()
+                .accept(new ReladomoJavaTypeSetter(attributeType, codeResolver));
 
         return attributeType;
     }
@@ -119,8 +120,8 @@ public class ReladomoTranslator {
             final Resolver<ErminName, ErminEntity> entityResolver,
             final CodeResolver codeResolver,
             Map<ErminName, MithraObjectType> mithraObjects) {
-        final Iterable<ErminName> exps = relationship.getExps().stream().map(exp -> exp
-                .getName()).collect(Collectors.toList());
+        final Iterable<ErminName> exps = relationship.getExps().stream()
+                .map(exp -> exp.getName()).collect(Collectors.toList());
 
         final MithraObjectType mithraObject = factory.createMithraObjectType();
         mithraObject.setObjectType(ObjectType.TRANSACTIONAL);
@@ -132,16 +133,17 @@ public class ReladomoTranslator {
         final List<RelationshipType> relationshipTypes = mithraObject.getRelationship();
         for (final ErminName name : exps) {
             List<AttributeType> primaryKeys = mithraObjects.get(name).getAttribute()
-                    .stream().filter(AttributePureType::isPrimaryKey).collect(Collectors
-                            .toList());
+                    .stream().filter(AttributePureType::isPrimaryKey)
+                    .collect(Collectors.toList());
             attributes.addAll(primaryKeys);
 
             RelationshipType relationshipType = factory.createRelationshipType();
             relationshipType.setCardinality(CardinalityType.MANY_TO_ONE);
             relationshipType.setName(name.toLowerCamel());
             relationshipType.setRelatedObject(name.toUpperCamel());
-            relationshipType.setValue(primaryKeys.stream().map(attr -> "this." + attr
-                    .getName() + " = " + name.toUpperCamel() + "." + attr.getName())
+            relationshipType.setValue(primaryKeys
+                    .stream().map(attr -> "this." + attr.getName() + " = "
+                            + name.toUpperCamel() + "." + attr.getName())
                     .collect(Collectors.joining(" and ")));
             relationshipTypes.add(relationshipType);
         }
@@ -149,35 +151,38 @@ public class ReladomoTranslator {
         mithraObjects.put(relationship.getName(), mithraObject);
 
         // Add Relationship elements to existing entities if the arity is 2.
-        relationship.applyBiFunction((ErminRelationshipExp left,
-                ErminRelationshipExp right) -> {
-            final List<RelationshipType> relationships = mithraObjects.get(left.getName())
-                    .getRelationship();
-            RelationshipType relationshipType = factory.createRelationshipType();
-            relationshipType.setName(relationship.getName().toLowerCamel());
-            relationshipType.setRelatedObject(right.getName().toUpperCamel());
-            relationshipType.setCardinality(CardinalityType.fromValue(
-                    translateMultiplicity(left.getMultiplicity()) + "-to-"
-                            + translateMultiplicity(right.getMultiplicity())));
+        relationship.applyBiFunction(
+                (ErminRelationshipExp left, ErminRelationshipExp right) -> {
+                    final List<RelationshipType> relationships = mithraObjects
+                            .get(left.getName()).getRelationship();
+                    RelationshipType relationshipType = factory.createRelationshipType();
+                    relationshipType.setName(relationship.getName().toLowerCamel());
+                    relationshipType.setRelatedObject(right.getName().toUpperCamel());
+                    relationshipType.setCardinality(CardinalityType.fromValue(
+                            translateMultiplicity(left.getMultiplicity()) + "-to-"
+                                    + translateMultiplicity(right.getMultiplicity())));
 
-            List<AttributeType> leftPrimaryKeys = new ArrayList<>();
-            List<AttributeType> rightPrimaryKeys = new ArrayList<>();
-            accumulatePrimaryKeys(entityResolver.resolveOrThrow(left.getName()),
-                    entityResolver, codeResolver, leftPrimaryKeys);
-            accumulatePrimaryKeys(entityResolver.resolveOrThrow(right.getName()),
-                    entityResolver, codeResolver, rightPrimaryKeys);
-            Stream<String> ls = leftPrimaryKeys.stream().map(attribute -> "this."
-                    + attribute.getName() + " = " + relationship.getName().toUpperCamel()
-                    + "." + attribute.getName());
-            Stream<String> rs = rightPrimaryKeys.stream().map(attribute -> right.getName()
-                    .toUpperCamel() + "." + attribute.getName() + " = " + relationship
-                            .getName().toUpperCamel() + "." + attribute.getName());
-            relationshipType.setValue(Stream.concat(ls, rs).collect(Collectors.joining(
-                    " and ")));
+                    List<AttributeType> leftPrimaryKeys = new ArrayList<>();
+                    List<AttributeType> rightPrimaryKeys = new ArrayList<>();
+                    accumulatePrimaryKeys(entityResolver.resolveOrThrow(left.getName()),
+                            entityResolver, codeResolver, leftPrimaryKeys);
+                    accumulatePrimaryKeys(entityResolver.resolveOrThrow(right.getName()),
+                            entityResolver, codeResolver, rightPrimaryKeys);
+                    Stream<String> ls = leftPrimaryKeys.stream()
+                            .map(attribute -> "this." + attribute.getName() + " = "
+                                    + relationship.getName().toUpperCamel() + "."
+                                    + attribute.getName());
+                    Stream<String> rs = rightPrimaryKeys.stream()
+                            .map(attribute -> right.getName().toUpperCamel() + "."
+                                    + attribute.getName() + " = "
+                                    + relationship.getName().toUpperCamel() + "."
+                                    + attribute.getName());
+                    relationshipType.setValue(
+                            Stream.concat(ls, rs).collect(Collectors.joining(" and ")));
 
-            relationships.add(relationshipType);
-            return null;
-        });
+                    relationships.add(relationshipType);
+                    return null;
+                });
 
     }
 
